# ceeder

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: black.yml  testing.yml
docs/: basics.rst  conf.py  index.rst  install.rst
examples/: README.md  facets_test.py  simple.py  simple_test.py
src/ceeder/: __init__.py  cdr.py  ceeder.py
src/ceeder/schemas/: cdr-v5.json
src/seeder/: __init__.py  cdr.py  seeder.py
