[tool.poetry]
name = "ceeder"
version = "0.0.2"
description = "Library for working with CDR files and analytics."
authors = ["max thomas <max@qntfy.com>"]

license = "MIT"
readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/qntfy/ceeder"
homepage = "https://github.com/qntfy/ceeder"

keywords = ['ceeder', 'cdr']

packages = [
    { include = "seeder", from = "src" },
]


[tool.poetry.dependencies]
python = "*"
falcon = "^2.0.0"
jsonschema = "^3.2.0"


[tool.poetry.dev-dependencies]
pytest = "^3.6"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
